contrast fix

--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -7,7 +7,7 @@ header, main, footer {
     margin: 1rem auto;
     border: 1px solid #dddd;
     padding: 1rem;
-    background-color: rgb(120, 120, 183);
+    background-color: #70a6fc
 }
 
 main {
